# -AI-Lawyer-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  Arabic_OCR_Eval_3.ipynb  CHANGELOG.md  PERFORMANCE_ANALYSIS.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_env.bat  test_ocr_models.py  test_stt.py
app/: legacy_gradio_app.py
app/agents/: document_agent.py  legal_agent.py  legal_research_agent.py  ocr_agent.py  supervisor.py
app/config/: settings.py
app/core/: iti_llm.py
app/core/agents/: contract_agent.py  document_agent.py  legal_research_agent.py  ocr_agent.py  supervisor.py
app/core/shared/: models.py
app/core/tools/: article_search_tool.py  contract_tools.py  lawhub_tools.py  legal_search_tool.py  ocr_tool.py
app/services/document/: docx_generator.py
app/services/ocr/: gemini_ocr.py
app/services/rag/: __init__.py  context_builder.py  generator.py  inference.py  retriever.py
app/tests/: test_services.py
app/tools/: ocr_tool.py
backend/: .env.example  alembic.ini  legacy_gradio_app.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: e9a86b87699a_baseline_schema.py
backend/scripts/: load_test_chat.py  tei_parity_check.py
backend/tests/: test_services.py
evaluation/: eval_retrieval.py  generation_eval.py  generation_eval_dataset_100.csv  generation_eval_report.md  generation_eval_results.csv  legal_rag_eval_dataset_full.csv  retrieval_eval_report.md  retrieval_eval_results.json
frontend/: README.md  index.html  package-lock.json
frontend-v2/: .env.example  index.html  package.json  vite.config.ts
frontend-v2/src/: App.tsx  index.css
frontend/src/: App.tsx  index.css
notebooks/: chandra-ocr-2-model.ipynb
templates/: chat.html  index.html
tests/: conftest.py
(+103 files in other folders)
