[project]
name = "lawyer-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "transformers==4.47.0",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "litestar[standard]>=2.23.0",
    "pydantic==2.10.6",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "torch==2.6.0",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124%60%08ash"
