[project]
name = "ai-lawyer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "gradio>=6.19.0",
    "langgraph>=1.2.7",
    "pillow>=12.2.0",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
